# sample-cdylib-wezterm-ssh

./: Cargo.toml  README.md
helper-lib/: Cargo.toml
helper-lib/src/: lib.rs
main-lib/: Cargo.toml
main-lib/src/: lib.rs
