[package]
name = "main-lib"
version = "0.1.0"
edition = "2018"

[patch.crates-io]
# We can remove my fork once openssl-sys points at openssl-src 300+
openssl-sys = { git="https://github.com/wez/rust-openssl.git", branch="openssl-src-300" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.6.6", features = ["async", "macros", "module", "serialize", "lua51", "vendored"] }
wezterm-ssh = { git = "https://github.com/wez/wezterm", features = ["vendored-openssl"] }
