[package]
name = "helper-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
chacha20poly1305 = "0.9.0"
derive_more = { version = "0.99.16", default-features = false, features = ["display", "from", "error", "is_variant"] }
hex = "0.4.3"
once_cell = "1.8.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.64"
strum = { version = "0.21.0", features = ["derive"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
walkdir = "2.3.2"

async-compat = "0.2.1"
futures = "0.3.16"
log = "0.4.14"
rand = { version = "0.8.4", features = ["getrandom"] }
rpassword = "5.0.1"
shell-words = "1.0"
smol = "1.2"
tokio = { version = "1.12.0", features = ["full"] }
wezterm-ssh = { git = "https://github.com/wez/wezterm", features = ["vendored-openssl"] }
