[package]
name = "main-lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
helper-lib = { path = "../helper-lib" }

futures = "0.3.17"
log = "0.4.14"
mlua = { version = "0.6.6", features = ["async", "macros", "module", "serialize", "lua51", "vendored"] }
once_cell = "1.8.0"
oorandom = "11.1.3"
paste = "1.0.5"
serde = { version = "1.0.130", features = ["derive"] }
simplelog = "0.10.2"
tokio = { version = "1.12.0", features = ["macros", "time"] }
whoami = "1.1.4"
